[package]
name = "dua-cli"
version = "2.24.2"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
edition = "2021"
repository = "https://github.com/Byron/dua-cli"
readme = "README.md"
description = "A tool to conveniently learn about the disk usage of directories, fast!"
license = "MIT"
include = ["src/**/*", "Cargo.*", "LICENSE", "README.md", "CHANGELOG.md", "!**/tests/*"]

[features]
default = ["tui-crossplatform", "trash-move"]
tui-crossplatform = ["crosstermion/tui-react-crossterm", "tui-shared"]

tui-shared = ["tui", "tui-react", "open", "unicode-segmentation", "unicode-width"]
trash-move = ["trash"]

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
jwalk = "0.8.1"
byte-unit = "4"
atty = "0.2.11"
petgraph = "0.6"
itertools = "0.12.0"
num_cpus = "1.10.0"
filesize = "0.2.0"
anyhow = "1.0.31"
trash = { version = "3.0.0", optional = true, default-features = false, features = ["coinit_apartmentthreaded"] }
chrono = { version = "0.4.31", default-features = false, features = ["std"] }

# 'tui' related
unicode-segmentation = { version = "1.3.0", optional = true }
unicode-width = { version = "0.1.5", optional = true }
crosstermion = { version = "0.13.0", default-features = false, optional = true }
tui = { package = "ratatui", version = "0.25.0", optional = true, default-features = false }
tui-react = { version = "0.22.0", optional = true }
open = { version = "5.0", optional = true }
wild = "2.0.4"
owo-colors = "4.0.0"
human_format = "1.0.3"
once_cell = "1.19"
gix-glob = "0.14.1"
gix-path = "0.10.1"
bstr = "1.8.0"
simplelog = "0.12.1"
log = "0.4.20"

[[bin]]
name="dua"
path="src/main.rs"

[lib]
name="dua"

[profile.release]
panic = 'abort'
incremental = false
overflow-checks = false
lto = "fat"
#codegen-units = 1
build-override = { opt-level = 3 }

[dev-dependencies]
pretty_assertions = "1.0.0"
