[package]
name = "dua-cli"
version = "2.32.2"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
edition = "2024"
repository = "https://github.com/Byron/dua-cli"
readme = "README.md"
description = "A tool to conveniently learn about the disk usage of directories, fast!"
license = "MIT"
include = [
    "src/**/*",
    "Cargo.*",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "!**/tests/*",
]

[features]
default = ["tui-crossplatform", "trash-move"]
tui-crossplatform = [
    "crosstermion/tui-crossterm",
    "tui",
    "tui-react",
    "open",
    "unicode-segmentation",
    "unicode-width",
]
trash-move = ["trash"]

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
clap_complete = "4.5.54"
jwalk = "0.8.1"
byte-unit = "4"
atty = "0.2.11"
petgraph = "0.8.3"
itertools = "0.14.0"
num_cpus = "1.10.0"
filesize = "0.2.0"
anyhow = "1.0.31"
trash = { version = "5.2.0", optional = true, default-features = false, features = [
    "coinit_apartmentthreaded", "chrono"
] }
chrono = { version = "0.4.31", default-features = false, features = ["std"] }

# 'tui' related
unicode-segmentation = { version = "1.3.0", optional = true }
unicode-width = { version = "0.2.0", optional = true }
crosstermion = { version = "0.14.0", default-features = false, optional = true }
tui = { package = "ratatui", version = "0.26.1", optional = true, default-features = false }
tui-react = { version = "0.23.2", optional = true }
open = { version = "5.0", optional = true }
wild = "2.0.4"
owo-colors = "4.0.0"
human_format = "1.0.3"
once_cell = "1.19"
gix-glob = "0.22.1"
gix-path = "0.10.10"
bstr = "1.8.0"
simplelog = "0.12.1"
log = "0.4.20"
log-panics = { version = "2", features = ["with-backtrace"] }
crossbeam = "0.8"

[[bin]]
name = "dua"
path = "src/main.rs"

[lib]
name = "dua"

[profile.release]
panic = 'abort'
incremental = false
overflow-checks = false
lto = "fat"
#codegen-units = 1
build-override = { opt-level = 3 }

[dev-dependencies]
pretty_assertions = "1.0.0"
