[package]
name = "tui-react"
version = "0.2.1"
authors = ["Sebastian Thiel <sthiel@thoughtworks.com>"]
edition = "2018"
repository = "https://github.com/Byron/dua-cli"
description = "TUI widgets using a react-like paradigm, allowing mutable component state and render properties."
readme = "README.md"
license = "MIT"

[dependencies]
tui = "0.8.0"
log = "0.4.6"
